<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".pokemon.detail.PokemonDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title="">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.pokemonDetail.PokemonDetailActivity">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressbar_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_water"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/progressbar_details">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    app:cardCornerRadius="16dp"
                    app:strokeWidth="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_description"
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:text="@string/pokemon"
                            android:textAlignment="center" />

                        <LinearLayout
                            android:id="@+id/ll_image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_description"
                            android:layout_marginVertical="8dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageButton
                                android:id="@+id/ib_back"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="#00FFFFFF"
                                android:contentDescription="@string/string_back"
                                android:src="@drawable/ic_baseline_arrow_left_24" />

                            <ImageView
                                android:id="@+id/iv_pokemon"
                                android:layout_width="128dp"
                                android:layout_height="128dp"
                                android:layout_marginHorizontal="16dp"
                                android:contentDescription="@string/pokemon_image"
                                android:src="@drawable/ic_pokeball_36" />

                            <ImageButton
                                android:id="@+id/ib_next"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="#00FFFFFF"
                                android:contentDescription="@string/next"
                                android:src="@drawable/ic_baseline_arrow_right_24" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_below="@id/ll_image"
                            android:layout_margin="8dp"
                            android:background="@color/black" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_types"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/divider"
                            android:layout_marginVertical="8dp" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/ll_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_description"
                            android:gravity="center">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/cl_height"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/cl_weight"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_height_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/height"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_height"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/tv_height_label"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/cl_weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/cl_height"
                                app:layout_constraintTop_toTopOf="parent">

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_weight_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/weight"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <com.google.android.material.textview.MaterialTextView
                                    android:id="@+id/tv_weight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintStart_toEndOf="@id/tv_weight_label"
                                    app:layout_constraintTop_toTopOf="parent" />

                            </androidx.constraintlayout.widget.ConstraintLayout>


                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/ll_details"
                            android:layout_marginVertical="8dp" />

                    </RelativeLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
